[package]
name = "benching-heap-serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.46"
quote = "1.0.21"

[dev-dependencies]
rand = "0.8.5"
serde = "1.0.145"
bincode = "1.3.3"
criterion = "0.3.5"

[[bench]]
name = "benchmarks"
harness = false